--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.ridethebus">
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -9,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RideTheBus">
         <activity android:name=".RecentRidesActivity" />
+        <activity android:name=".GameActivity" />
         <activity android:name=".LeaderboardActivity" />
         <activity android:name=".MainActivity"
             android:exported="true">
