--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RideTheBus">
         <activity android:name=".RecentRidesActivity" />
+        <activity android:name=".FinishActivity"/>
         <activity android:name=".StackDetailActivity"
             android:screenOrientation="landscape"/>
         <activity android:name=".GameActivity"
