Done For Right Now. Taco Bell Time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RideTheBus">
-        <activity android:name=".RecentRidesActivity" />
-        <activity android:name=".FinishActivity"/>
+        <activity android:name=".RecentRidesActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FinishActivity"
+            android:screenOrientation="landscape"/>
         <activity android:name=".StackDetailActivity"
             android:screenOrientation="landscape"/>
         <activity android:name=".GameActivity"
             android:screenOrientation="landscape"/>
-        <activity android:name=".LeaderboardActivity" />
+        <activity android:name=".LeaderboardActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:exported="true">
