--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.ridethebus">
+    package="com.rpk2301.ridethebus">
+
+    <!-- Permission for accessing the advertising ID -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Ride The Bus"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RideTheBus">
 
         <activity android:name=".RecentRidesActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".HowToPlayActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".FinishActivity"
             android:screenOrientation="landscape"/>
